syntax = "proto3";
package status_list_2021;

enum Purpose {
    REVOCATION = 0;
    SUSPENSION = 1;
}

message CreateRequest {
    Purpose purpose = 1;
    optional uint64 length = 2;
    optional string id = 3;
    optional string expiration_date = 4;
    repeated string contexts = 5;
    repeated string types = 6;
    string issuer = 7;
}

message StatusListCredential {
    string credential_json = 1;
}

message UpdateRequest {
    string credential_json = 1;
    map<uint64, bool> entries = 2;
}

service StatusList2021Svc {
    rpc create(CreateRequest) returns(StatusListCredential);
    rpc update(UpdateRequest) returns(StatusListCredential);
}
